js/js.translator/testData/incremental/invalidation/crossModuleReferences/lib1/l1.kt
fun foo() = 42
fun bar() = 24

fun baz(s: String) = s.length
fun baz(i: Int) = i + 2
fun baz(b: Boolean) = if (b) 10 else 1
